# Make tempest-book like a library so
# we can test the book example

[package]
name = "tempest-book"
version = "0.1.1"
authors = ["grippy <gmelton@gmail.com>"]
edition = "2018"
publish = false
build = "build.rs"

[lib]
name = "tempest_book"
path = "lib.rs"

[dev-dependencies]
tempest = { path = "../tempest", version = "=0.1.1" }
tempest-source-mock = { path = "../tempest-source-mock", version = "=0.1.1" }
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"
