[package]
name = "tempest-source"
description = "Tempest Source & SourceBuilder Trait"
version = "0.1.1"
authors = ["Greg Melton <gmelton@gmail.com>"]
readme = "README.md"
keywords = ["tempest"]
repository = "https://github.com/grippy/tempest.git"
# documentation = ""
categories = []
license = "MIT"
edition = "2018"

[lib]
name = "tempest_source"
path = "src/lib.rs"

[dependencies]
log = "0.4"
config = "0.9"
serde = "1.0"
serde_derive = "1.0"