[package]
name = "tempest"
version = "0.1.0"
authors = ["grippy <gmelton@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.1"
bytes = "0.4"
config = "0.9"
byteorder = "1.1"
futures = "0.1"
histogram = "0.6.9"
lazy_static = "1.3.0"
log = "0.4"
minreq = "1.3.0"
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
structopt = "0.2"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-signal = "0.2"
uuid = { version = "0.7", features = ["v4"] }

# redis_streams = { git = "https://github.com/grippy/redis-streams-rs.git" }
# redis_streams = {path = "../../redis-streams-rs"}
