[package]
name = "tempest"
description = "Realtime message handling framework inspired by Apache Storm and built with Actix"
version = "0.1.1"
authors = ["Greg Melton <gmelton@gmail.com>"]
readme = "README.md"
keywords = ["storm", "actix", "async", "tokio"]
repository = "https://github.com/grippy/tempest.git"
# documentation = ""
categories = []
license = "MIT"
edition = "2018"

[[example]]
name = "topology_example"
path = "examples/topology-example/src/main.rs"

[dependencies]
actix = "0.8.1"
bytes = "0.4"
config = "0.9"
byteorder = "1.1"
futures = "0.1"
histogram = "0.6.9"
lazy_static = "1.3.0"
log = "0.4"
minreq = "1.3.0"
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
structopt = "0.2"
tempest-source = { path = "../tempest-source", version = "=0.1.1" }
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-signal = "0.2.7"
tokio-timer = "0.2.11"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
pretty_env_logger = "0.3.0"
tempest-source = { path = "../tempest-source", version = "=0.1.1" }
tempest-source-mock = { path = "../tempest-source-mock", version = "=0.1.1" }
tempest-source-redis = { path = "../tempest-source-redis", version = "=0.1.1" }
