[package]
name = "topology-redis-stream"
version = "0.1.1"
authors = ["grippy <gmelton@gmail.com>"]
edition = "2018"
publish = false # don't publish this example

[[bin]]
name = "topology_redis_stream"
path = "src/main.rs"

[dependencies]
pretty_env_logger = "0.3.0"
tempest = { path = "../../../tempest", version = "=0.1.1" }
tempest-source-redis = { path = "../../../tempest-source-redis", version = "=0.1.1" }
